[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appyqt"
version = "1.0"
description = "Check GitHub page at github.com/ApplePair111/appyqt and docs at appyqt-docs.applepair111.xyz/en/latest"

dependencies = [
    "blessed==1.44.0",
    "cryptography==48.0.0"
]